fix issue caused by too much padding

--- a/src/app/components/common/dialog/consolepanel/consolepanel-dialog.component.scss
+++ b/src/app/components/common/dialog/consolepanel/consolepanel-dialog.component.scss
@@ -6,7 +6,7 @@
   border: none;
   word-wrap: break-word;
   background: #000000;
-  padding: 20px 30px 20px 10px;
+  padding: 20px 5px 20px 10px;
   font-size: 100%;
   color: #00ff00;
   font-family: "Courier New", Courier, monospace;
@@ -14,7 +14,7 @@
 }
 
 #console-box {
-  max-width: 100%;
+  max-width: 103%;
   max-height: 575px;
 }
 
